# howbootcamp-desafio2

./: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  generate_data.py  main.py  pyproject.toml  test_pulumi.py
infra/: Pulumi.yaml  __main__.py
scripts/: generate_data.py  raw_to_trusted.py  trusted_to_analytic.py
utils/: data_intake.py  fake_data.py  infra.py
