[tool.poetry]
name = "howbootcamp-desafio2"
version = "0.1.0"
description = "Data Lake simplificado na AWS, da ingestão até a consulta"
authors = ["Bernardo Costa <bemc@poli.ufrj.br>"]
readme = "README.md"
packages = [{include = "howbootcamp_desafio2"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
boto3 = "^1.28.44"
faker = "^19.6.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
