[tool.poetry]
name = "howbootcamp-desafio2"
version = "0.1.0"
description = "Data Lake simplificado na AWS, da ingestão até a consulta"
authors = ["Bernardo Costa <bemc@poli.ufrj.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
boto3 = "^1.28.44"
faker = "^19.6.0"
python-dotenv = "^1.0.0"
pulumi = "^3.82.1"
pulumi-aws = "^6.1.0"
pyspark = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
